Remove Tableau from tags

--- a/project/project7/index.html
+++ b/project/project7/index.html
@@ -141,7 +141,7 @@
 
     <h4><a href="https://github.com/gtraskas/breast_cancer_prediction/">Breast Cancer Analysis and Prediction</a></h4>
     <h5>An attempt to investigate various prediction algorithms applying advanced machine learning techniques on the Breast Cancer Wisconsin Dataset, obtained from Kaggle. Work in progress...</h5>
-     <kbd class="item-tag">Python</kbd>  <kbd class="item-tag">scikit-learn</kbd>  <kbd class="item-tag">machine learning</kbd>  <kbd class="item-tag">feature selection</kbd>  <kbd class="item-tag">Tableau</kbd>  <kbd class="item-tag">Pandas</kbd>  <kbd class="item-tag">IPython notebook</kbd> 
+     <kbd class="item-tag">Python</kbd>  <kbd class="item-tag">scikit-learn</kbd>  <kbd class="item-tag">machine learning</kbd>  <kbd class="item-tag">feature selection</kbd>  <kbd class="item-tag">Pandas</kbd>  <kbd class="item-tag">IPython notebook</kbd> 
 
 </div>
 
