Some fixes in About me

--- a/about/me/index.html
+++ b/about/me/index.html
@@ -149,7 +149,7 @@
 
 <p>My name is <strong>George Traskas</strong> and I live in Thessaloniki, Greece. I went to <a href="https://www.auth.gr/en">Aristotle University of Thessaloniki</a> and graduated with a BSc in Chemistry and a MSc in Chemical Technology. During my MSc studies and for a couple of years I was involved in several water treatment research projects. I am an experienced chemist with a strong background in analytical chemistry and I work at <a href="http://www.cperi.certh.gr/index.php?lang=en">CPERI/CERTH</a> for the last 10 years.</p>
 
-<p>Statistics and data analysis in chemistry is a growing concern these days. Thus, a few months ago, I have started learning data analysis at <a href="https://www.udacity.com">Udacity</a> and completed successfully the Data Analyst Nanodegree Program. This web site is mainly focused on data science and contains a collection of my work in machine learning, data wrangling, exploratory data analysis, and statistics.</p>
+<p>Statistics and data analysis in chemistry is a growing concern these days. Thus, a few months ago, I started learning data analysis at <a href="https://www.udacity.com">Udacity</a> and completed successfully the Data Analyst Nanodegree Program. This web site is mainly focused on data science and contains a collection of my work in machine learning, data wrangling, exploratory data analysis, and statistics.</p>
 
 <h3 id="skills">Skills</h3>
 
