--- a/project/project7/index.html
+++ b/project/project7/index.html
@@ -140,7 +140,7 @@
       
 
     <h4><a href="https://github.com/gtraskas/breast_cancer_prediction/">Breast Cancer Analysis and Prediction</a></h4>
-    <h5>An attempt to investigate various prediction algorithms applying advanced machine learning techniques on the Breast Cancer Wisconsin Dataset, obtained from Kaggle. Work in progress...</h5>
+    <h5>Advanced machine learning methods were utilized to build, test and optimise the performance of K-NN algorithm for breast cancer diagnosis.</h5>
      <kbd class="item-tag">Python</kbd>  <kbd class="item-tag">scikit-learn</kbd>  <kbd class="item-tag">machine learning</kbd>  <kbd class="item-tag">feature selection</kbd>  <kbd class="item-tag">PCA</kbd>  <kbd class="item-tag">cross-validation</kbd>  <kbd class="item-tag">evaluation-metrics</kbd>  <kbd class="item-tag">Pandas</kbd>  <kbd class="item-tag">IPython notebook</kbd> 
 
 </div>
