docs: Update site info

--- a/about/me/index.html
+++ b/about/me/index.html
@@ -147,28 +147,36 @@
 
 <p>Hi!</p>
 
-<p>My name is <strong>George Traskas</strong> and I live in Thessaloniki, Greece. I went to <a href="https://www.auth.gr/en">Aristotle University of Thessaloniki</a> and graduated with a BSc in Chemistry and a MSc in Chemical Technology. During my MSc studies and for a couple of years I was involved in several water treatment research projects. I am an experienced chemist with a strong background in analytical chemistry and I work at <a href="http://www.cperi.certh.gr/index.php?lang=en">CPERI/CERTH</a> for the last 10 years.</p>
+<p>My name is <strong>George Traskas</strong> and I am from Greece. I went to <a href="https://www.auth.gr/en">Aristotle University of Thessaloniki</a> and graduated with a BSc in Chemistry and a MSc in Chemical Technology. During my MSc studies and for a couple of years I was involved in several water treatment research projects. I am an experienced chemist with a strong background in analytical chemistry and I work at <a href="http://www.cperi.certh.gr/index.php?lang=en">CPERI/CERTH</a> for the last 10 years.</p>
 
-<p>Statistics and data analysis in chemistry is a growing concern these days. Thus, a few months ago, I started learning data analysis at <a href="https://www.udacity.com">Udacity</a> and completed successfully the Data Analyst Nanodegree Program. This web site is mainly focused on data science and contains a collection of my work in machine learning, data wrangling, exploratory data analysis, and statistics.</p>
+<p>Statistics and data analysis in chemistry is a growing concern these days. Thus, last year I started learning data analysis at <a href="https://www.udacity.com">Udacity</a> and completed successfully the Data Analyst NanoDegree Program. This web site is mainly focused on data science and contains a collection of my work in machine learning, data wrangling, exploratory data analysis, and statistics.</p>
 
-<h3 id="skills">Skills</h3>
+<h3 id="my-skills">My Skills</h3>
 
 <ul>
-<li>Data Analysis</li>
-<li>Statistics</li>
-<li>Machine Learning</li>
-<li>Numpy</li>
-<li>Pandas</li>
+<li>Machine Learning - Regressions, SVM&rsquo;s, Decision Trees, Naive Bayes, Clustering, Neural Networks</li>
+<li>Cross Validation and Model Evaluation</li>
+<li>Learning Curves and Error Analysis</li>
+<li>Feature Scaling and Normalization</li>
+<li>Feature Selection and Dimensionality Reduction (PCA)</li>
+<li>Statistics - Descriptive, Inferential, Hypothesis Testing, Q-Tests, T-Tests</li>
+<li>Data Mining/Wrangling - xls, csv, html, json, xml, SQL</li>
+<li>Data Analysis - Univariate, Multivariate, Correlations, Visualizations</li>
+</ul>
+
+<h3 id="my-toolbox">My Toolbox</h3>
+
+<ul>
 <li>Python</li>
+<li>Scikit-Learn</li>
+<li>NumPy</li>
+<li>Pandas</li>
+<li>Matplotlib</li>
+<li>Jupyter Notebooks</li>
 <li>R</li>
 <li>SQL</li>
 <li>Tableau</li>
-<li>Scikit-Learn</li>
-<li>Hypothesis Testing</li>
-<li>Model Evaluation and Validation</li>
-<li>Classification and Regression</li>
-<li>Clustering</li>
-<li>Dimensionality Reduction</li>
+<li>LaTeX</li>
 </ul>
 
 <h3 id="ask-me">Ask me</h3>
