--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <h1>A data science blog</h1>
 
-        <h2>Hi, I am George Traskas. In my free time I take an interest in working on statistics, machine learning, and data.</h2>
+        <h2>Hi, my name is George and I am actively working on machine learning and data analysis subjects.</h2>
 
     </div>
 
