docs: Update site

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <h1>A data science blog</h1>
 
-        <h2>Hi, my name is George and I am actively working on machine learning and data analysis subjects.</h2>
+        <h2>covering mostly machine learning topics.</h2>
 
     </div>
 
