docs: Post K-means and PCA.

--- a/project/index.html
+++ b/project/index.html
@@ -163,7 +163,7 @@
     
       
 
-    <h4><a href="/project/project1/">Identify Fraud from Enron Email</a></h4>
+    <h4><a href="https://github.com/gtraskas/Udacity/tree/master/Data%20Analyst%20Nanodegree/P7_Intro_to_Machine_Learning/">Identify Fraud from Enron Email</a></h4>
     <h5>Identified which Enron employees are more likely to have committed fraud using machine learning and public Enron financial and email data.</h5>
      <kbd class="item-tag">Python</kbd>  <kbd class="item-tag">scikit-learn</kbd>  <kbd class="item-tag">machine learning</kbd>  <kbd class="item-tag">natural language processing</kbd>  <kbd class="item-tag">feature selection</kbd> 
 
